tests/fixtures/functional_patterns/positive/p53_parallel_map.rs
use rayon::prelude::*;

fn parallel_process(items: Vec<i32>) -> Vec<i32> {
    items.par_iter()
        .map(|x| x * 2)
        .collect()
}
