tests/fixtures/functional_patterns/negative/n43_arc_clone.rs
use std::sync::Arc;

fn share_data(data: Arc<i32>) -> Arc<i32> {
    Arc::clone(&data)
}
